--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button>browse apps</button>
     <hr></hr>
     <p> for developers </p>
-    <button>submit your app</button>
+    <button href="https://github.com/hacknorris-aka-penguin/iWeb-store/issues/new?assignees=&labels=app+request&template=app-request.md&title=%5Bapp%5D+-+">submit your app</button>
     <button>view source of store</button>
   </body>
 </html>
