--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <hr></hr>
     <p> for developers </p>
     <button href="https://github.com/hacknorris-aka-penguin/iWeb-store/issues/new?assignees=&labels=app+request&template=app-request.md&title=%5Bapp%5D+-+">submit your app</button>
-    <button>view source of store</button>
+    <button href="https://github.com/hacknorris-aka-penguin/iWeb-store">view source of store</button>
   </body>
 </html>
