--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <navbar>
       <title>iWeb store</title>
       <button>help</button>
-      <button>source</button>
+      <button href="https://github.com/hacknorris-aka-penguin/iWeb-store">source</button>
     </navbar>
     <hr></hr>
     <sup>a free app store for free apps. fully online and opensource.</sup>
