--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <navbar>
       <title>iWeb store</title>
       <button>help</button>
-      <button href="https://github.com/hacknorris-aka-penguin/iWeb-store">source</button>
+      <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store')">source</button>
     </navbar>
     <hr></hr>
-    <sup>a free app store for free apps. fully online and opensource.</sup>
+    <sup>a free app store for free apps. fully online and opensource. based on profiles.</sup>
     <hr></hr>
     <button>install store</button>
     <button>browse apps</button>
     <hr></hr>
     <p> for developers </p>
-    <button href="https://github.com/hacknorris-aka-penguin/iWeb-store/issues/new?assignees=&labels=app+request&template=app-request.md&title=%5Bapp%5D+-+">submit your app</button>
-    <button href="https://github.com/hacknorris-aka-penguin/iWeb-store">view source of store</button>
+    <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store/issues/new?assignees=&labels=app+request&template=app-request.md&title=%5Bapp%5D+-+')">submit your app</button>
+    <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store')">view source of store</button>
   </body>
 </html>
