--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <hr></hr>
     <sup>a free app store for free apps. fully online and opensource. based on profiles.</sup>
     <hr></hr>
-    <button>install store</button>
-    <button>browse apps</button>
+    <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store/iwebstore.mobileconfig')">install store</button>
+    <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store/list.html')">browse apps</button>
     <hr></hr>
     <p> for developers </p>
     <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store/issues/new?assignees=&labels=app+request&template=app-request.md&title=%5Bapp%5D+-+')">submit your app</button>
