--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <hr></hr>
     <sup>a free app store for free apps. fully online and opensource. based on profiles.</sup>
     <hr></hr>
-    <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store/iwebstore.mobileconfig')">install store</button>
+    <button onclick="window.open('iwebstore.mobileconfig')">install store</button>
     <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store/list.html')">browse apps</button>
     <hr></hr>
     <p> for developers </p>
