--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <navbar>
-      <title>iWeb store</title>
+      <h2>iWeb store</h2>
       <button>help</button>
       <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store')">source</button>
     </navbar>
