--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> </meta>
   </head>
   <body>
-    <navbar>
+    <nav>
       <nobr><h2>iWeb store</h2><nobr>
       <button>help</button>
       <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store')">source</button>
-    </navbar>
+    </nav>
     <hr></hr>
     <sup>a free app store for free apps. fully online and opensource. based on profiles.</sup>
     <hr></hr>
