--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav>
-      <nobr><h2>iWeb store</h2><nobr>
+      <nobr><header>iWeb store</header><nobr>
       <button>help</button>
       <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store')">source</button>
     </nav>
