--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <nav>
       <nobr><header style="display: inline">iWeb store</header><nobr>
       <button>help</button>
-      <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store')">source</button>
     </nav>
     <hr></hr>
-    <sup>a free app store for free apps. fully online and opensource. based on profiles.</sup>
-    <hr></hr>
-    <button onclick="window.open('iwebstore.mobileconfig')">install store</button>
-    <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store/list.html')">browse apps</button>
+    <sup><small>a free app store for free apps. fully online and opensource. based on profiles.</small></sup>
+    <br>
+    <p> for users </p>
+    <button onclick="window.open('iwebstore.mobileconfig')">install store: </button>
+    <button onclick="window.open('apps/list.html')">browse apps: </button>
     <hr></hr>
     <p> for developers </p>
     <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store/issues/new?assignees=&labels=app+request&template=app-request.md&title=%5Bapp%5D+-+')">submit your app</button>
