many smol changes

--- a/apps/list.html
+++ b/apps/list.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> </meta>
   </head>
   <body>
-  <button>back</button>
+  <button onclick="window.location.href = '../index.html'">back</button>
   <hr>
   <button>games</button><br>
   <button>media editing</button><br>
