--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
   <body>
     <nav>
       <nobr><header style="display: inline">iWeb store</header><nobr>
-      <button>help</button>
+      
     </nav>
     <hr></hr>
-    <sup><small>a free app store for free apps. fully online and opensource. based on profiles.</small></sup>
+    <sup><small>a free app store for foss apps. fully online and opensource. based on profiles.</small></sup>
     <br>
     <p> for users </p>
-    <button onclick="window.open('iwebstore.mobileconfig')">install store: </button>
-    <button onclick="window.open('apps/list.html')">browse apps: </button>
+    <button onclick="window.location.href = 'help.html';">help</button>
+    <button onclick="window.location.href = 'iwebstore.mobileconfig'">install store: </button>
+    <button onclick="window.location.href = 'apps/list.html'">browse apps: </button>
     <hr></hr>
     <p> for developers </p>
-    <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store/issues/new?assignees=&labels=app+request&template=app-request.md&title=%5Bapp%5D+-+')">submit your app</button>
-    <button onclick="window.open('https://github.com/hacknorris-aka-penguin/iWeb-store')">view source of store</button>
+    <button onclick="window.location.href = 'https://github.com/hacknorris-aka-penguin/iWeb-store/issues/new?assignees=&labels=app+request&template=app-request.md&title=%5Bapp%5D+-+'">submit your app</button>
+    <button onclick="window.location.href = 'https://github.com/hacknorris-aka-penguin/iWeb-store'">view source of store</button>
   </body>
 </html>
