big oooof... finally page done... (probly)

--- a/help.html
+++ b/help.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+    <title>iWebstore</title>
+    <link rel="icon" type="image/x-icon" href="icon.ico">
 	</head>
 	<body>
     <nav>
