--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="application-name" content="iWeb Store"></meta>
     <meta name="description" content="a free app store for free apps. fully online and opensource."></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> </meta>
+    <title>iWebstore</title>
+    <link rel="icon" type="image/x-icon" href="icon.ico">
   </head>
   <body>
     <nav>
-      <nobr><header style="display: inline">iWeb store</header><nobr>
+	    <nobr><header>iWeb store</header><nobr>
       
     </nav>
     <hr></hr>
@@ -17,7 +19,7 @@
     <p> for users </p>
     <button onclick="window.location.href = 'help.html';">help</button>
     <button onclick="window.location.href = 'iwebstore.mobileconfig'">install store: </button>
-    <button onclick="window.location.href = 'apps/list.html'">browse apps: </button>
+    <button onclick="window.location.href = 'list.html'">browse apps: </button>
     <hr></hr>
     <p> for developers </p>
     <button onclick="window.location.href = 'https://github.com/hacknorris-aka-penguin/iWeb-store/issues/new?assignees=&labels=app+request&template=app-request.md&title=%5Bapp%5D+-+'">submit your app</button>
