--- a/list.html
+++ b/list.html
@@ -1,1 +1,28 @@
+<html>
+  <head>
+    <meta charset="UTF-8"></meta>
+    <meta name="author" content="hacknorris"></meta>
+    <meta name="application-name" content="iWeb Store"></meta>
+    <meta name="description" content="a free app store for free apps. fully online and opensource."></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> </meta>
+    <title>iWebstore</title>
+    <link rel="icon" type="image/x-icon" href="icon.ico">
+  </head>
+  <body>
+    <nav>
+      <nobr><header>iWeb store</header><nobr> 
+    </nav>
+    <hr>
+    <button onclick="window.location.href = 'index.html'">back</button><br><br>
 
+    <button onclick="window.location.href = 'apps/books/index.html'">books</button><br>
+    <button onclick="window.location.href = 'apps/dev/index.html'">developer tools</button><br>
+    <button onclick="window.location.href = 'apps/editing/index.html'">media editing</button><br>
+    <button onclick="window.location.href = 'apps/games/index.html'">games</button><br>
+    <button onclick="window.location.href = 'apps/search/index.html'">search engines</button><br>
+    <button onclick="window.location.href = 'apps/social/index.html'">social media</button><br>
+    <button onclick="window.location.href = 'apps/tools/index.html'">tools</button><br>
+<button onclick="window.location.href = 'apps/other/index.html'">other</button>
+
+  </body>
+</html>
