--- a/template.html
+++ b/template.html
@@ -12,6 +12,7 @@
   <header>title</header><br>
   <button>download</button><br>
   <article>description</article><br>
-  <footer>creator</footer><br>
+  <footer>creator:</footer><br>
+  <footer>official link:</footer>
   </body>
-  </html>
+</html>
