--- a/apps/search/index.html
+++ b/apps/search/index.html
@@ -1,7 +1,12 @@
 <html>
 <head>
-<title>iWebStore</title>
-<link rel="icon" type="image/x-icon" href="../../icon.ico">
+    <meta charset="UTF-8"></meta>
+    <meta name="author" content="hacknorris"></meta>
+    <meta name="application-name" content="iWeb Store"></meta>
+    <meta name="description" content="a free app store for free apps. fully online and opensource."></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> </meta>
+    <title>iWebstore</title>
+    <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
 <body>
 <nav>
@@ -14,3 +19,4 @@
 </div>
 </body>
 </html>
+
