--- a/help.html
+++ b/help.html
@@ -1,8 +1,13 @@
 <html>
 	<head>
+    <meta charset="UTF-8"></meta>
+    <meta name="author" content="hacknorris"></meta>
+    <meta name="application-name" content="iWeb Store"></meta>
+    <meta name="description" content="a free app store for free apps. fully online and opensource."></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> </meta>
     <title>iWebstore</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
-	</head>
+  </head>
 	<body>
     <nav>
       <nobr><header style="display: inline">iWeb store</header><nobr> 
