changes - compatibility and download version

--- a/app-list.html
+++ b/app-list.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <nav>
+      <button onclick="window.location.href = 'help.html'">?</button>
       <nobr><header>iWeb store</header><nobr> 
     </nav>
     <hr>
-    <button onclick="history.back();">back</button><br><br>
 
     <button onclick="window.location.href = 'apps/books/index.html'">books</button><br>
     <button onclick="window.location.href = 'apps/dev/index.html'">developer tools</button><br>
