--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <body>
     <nav>
 	    <nobr><header>iWeb store</header><nobr>
-      
     </nav>
     <hr></hr>
-    <sup><small>a free app store for foss apps. fully online and opensource. based on profiles.</small></sup>
+    <sup><small>a free app store for foss apps. fully online. based on profiles.</small></sup>
     <br>
     <p> for users </p>
     <button onclick="window.location.href = 'help.html';">help</button>
