--- a/template.html
+++ b/template.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> </meta>
   </head>
   <body>
-  <button>back</button>
+  <button onclick="history.back()">back</button>
   <hr>
   <header>title</header><br>
   <button>download</button><br>
   <article>description</article><br>
-  <footer>creator:</footer><br>
-  <footer>official link:</footer>
+  <footer>creator: <a href=""> </a></footer><br>
+  <footer>official link: <a href=""> </a></footer>
   </body>
 </html>
