--- a/apps/tools/index.html
+++ b/apps/tools/index.html
@@ -13,10 +13,12 @@
 <nobr><header>iWeb store</header><nobr> 
 </nav>
 <hr>
-<button onclick="window.location.href = '../../list.html'">back</button><br><br>
+<button onclick="window.history.back();">back</button><br><br>
 <div>
 <img></img><p></p><p></p><a></a>
 </div>
 </body>
 </html>
+
+
 
