--- a/help.html
+++ b/help.html
@@ -13,25 +13,44 @@
       <nobr><header style="display: inline">iWeb store</header><nobr> 
     </nav>
     <hr></hr>
-    <button onclick="window.location.href = 'index.html'">back</button><br>
+    <button onclick="history.back()">back</button><br>
 	<pre>
 so, yes. a help page(store's Q/A): 
 
-- are all these apps free? probably yes although there might be occasional paid (but opensource) project
+- are all these apps free? 
 
-- are ALL apps here opensource? YES YES YES. how it could be another?
+--probably yes although there might be occasional paid (but opensource) project
 
-- how does it work? it asks you to install profile of a webpage. 
+- are ALL apps here opensource? 
 
-- is it safe? yes - you can wiev both apps and store's source to be sure. also - all apps were scanned by mod in virustotal =]
+--YES YES YES. how it could be another?
 
-- who can add apps? anyone who have github account =]
+- how does it work? 
 
-- how to install apps? search for them in store, click download and follow on-screen instructions
+--it asks you to install profile of a webpage. 
 
-- what if i find approved app which changed to a virus? send link to hacknorris@tutanota.com and we'll see...
+- is it safe? 
 
-- is data shared on this store published also somewhere else? no. just look at source. there is nothing. plain html as a general site + small parts of JS to use in buttons and plist for donwloads.
+--yes - you can wiev both apps and store's source to be sure. 
+--also - all apps were scanned by mod in virustotal =]
+
+- who can add apps? 
+
+--anyone who have github account =]
+
+- how to install apps? 
+
+--search for them in this store, 
+--click download and follow on-screen instructions
+
+- what if i find approved app which changed to a virus? 
+
+--send link to hacknorris@tutanota.com and we'll see...
+
+- is data shared on this store published also somewhere else? 
+
+--no. just look at source. there is nothing. 
+--plain html as a general site + small parts of JS to use in buttons and plist for donwloads.
 
 - what rules are to publish app? below ↓↓↓
 
@@ -39,16 +58,20 @@ so, yes. a help page(store's Q/A):
 
 -  - dont publish viruses (although mod checks for that)
 
--  - allowed is using services like google analytics or fonts although app need to be opensource and user need to be notified about it
+-  - allowed is using services like google analytics or fonts although 
+-  - app need to be opensource and user need to be notified about it
 
--  - allowed is publishing apps from any country. with exception of promoting violence, war or other destructive things (mod doesnt check country. checks content instead)
+-  - allowed is publishing apps from any country. 
+-  -with exception of promoting violence, war or other destructive things 
+-  -(mod doesnt check country. checks content instead)
 
--  - allowed are aps with partial source opened (eg - with closed-source binaries and/or clients for closed-source apps)
+-  - allowed are apps with partial source opened 
+-  -(eg - with closed-source binaries and/or clients for closed-source apps)
 
--  - not allowed is pirating other content (source-code, images, games, music, etc...)
+-  - not allowed is pirating other content 
+-  -(source-code, images, games, music, etc...)
 
 -  - all.
-
 	</pre>
 	</body>
 </html>
